# duckdb-docs

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  template_index.md  work.duckdb
.github/workflows/: docs-pages.yml
data/output/: geo_parcels.parquet  orders.parquet
data/raw/: orders.csv
docs/: index.md  template_index.md
docs/00_overview/: naming_conventions.md  project_structure.md  what_is_duckdb.md  when_to_use_duckdb.md  workflow_layers.md
docs/01_setup/: extensions.md  in_memory_database.md  local_database.md  notebook_setup_cell.md  project_paths.md
docs/02_ingestion/: csv.md  excel.md  external_databases.md  folders_and_globs.md  json.md  parquet.md  partitioned_parquet.md  remote_files_http_s3.md
docs/03_spatial_ingestion/: esri_file_geodatabase.md  geojson.md  geoparquet.md  layer_inspection.md  shapefile.md  spatial_extension_setup.md
docs/04_eda/: categorical_frequency.md  date_range_check.md  distinct_profile.md  duplicate_check.md  null_profile.md  numeric_summary.md  outlier_scan.md  preview_rows.md  row_counts.md  schema_inspection.md  table_summary.md
docs/05_spatial_eda/: area_length_summary.md  crs_check.md  geometry_type_count.md  invalid_geometry_check.md  null_geometry_check.md  spatial_extent.md  spatial_join_preview.md
duckdb-workflow-docs/: README.md  template_index.md
notebooks/: 00_eda_base.ipynb  01_etl_base.ipynb  02_spatial_eda_base.ipynb  03_validation_base.ipynb  04_export_base.ipynb
python/: README.md  duckdb_helpers.py  eda_helpers.py  path_helpers.py  spatial_helpers.py  validation_helpers.py
(+93 files in other folders)
