[project]
name = "duckeb-docs"
version = "0.1.0"
description = "Notebook-first DuckDB workflow docs and templates"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.5.4",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "pandas>=2.0",
]
